# clawhub-lab

./: .gitignore  AGENT_TASKS.md  README.md  exploration-status-2026-03-02-11-52.md  exploration-status-2026-03-02-12-02.md  exploration-status-2026-03-02-12-13.md
code-examples/hello-triangle/: CMakeLists.txt  hello_triangle.cpp
reports/: exploration-status-2026-03-02-14-02.md  exploration-status-2026-03-02-18-02.md  exploration-status-2026-03-02-18-32.md  exploration-status-2026-03-02-20-32.md  exploration-summary-2026-02-28.md  skill-analysis-code-testrunner.md
skills-analysis/: 1password-skill-deep.md  3d-cog-skill-deep.md  ai-ppt-generate-skill-deep.md  antigravity-image-gen-skill-deep.md  api-limit-status-2026-03-02-19-32.md  apple-notes-skill-deep.md  apple-reminders-skill-deep.md  automation-workflows-skill-deep.md  batch-14-skills-deep.md  bilibili-video-skills.md  bluebubbles-skill-deep.md  canvas-skill-deep.md  coding-agent-skill-deep.md  data-analyst-skill-deep.md  database-operations-skill-deep.md  discord-skill-deep.md  exploration-status-2026-03-02-11-02.md  exploration-status-2026-03-02-11-32.md  exploration-status-2026-03-02-11-42.md  exploration-status-2026-03-02-12-33.md  exploration-status-2026-03-02-13-32.md  exploration-status-2026-03-02-15-32.md  exploration-status-2026-03-02-16-02.md  exploration-status-2026-03-02-16-32.md  exploration-status-2026-03-02-17-02.md  exploration-status-2026-03-02-21-02.md  find-skills-skill-deep.md  gemini-skill-deep.md  gh-issues-skill-deep.md  github-skill-analysis.md  github-skill-deep.md  gog-skill-deep.md  (+39 more)
